cloudformation/keycloak/keycloak-ecs.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Keycloak Fargate Cluster (WORK IN PROGRESS)

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Networking"
        Parameters:
          - VPC
          - PrivateSubnets
          - PublicSubnets
      - Label:
          default: "Keycloak"
        Parameters:
          - KeycloakVersion

Parameters:
  VPC:
    Type: AWS::EC2::VPC::Id
    Description: The VPC to deploy the Fargate cluster into
  PrivateSubnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Select at least 2 private subnets for the Fargate cluster  
  PublicSubnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Select at least 2 public subnets for the ALB
  KeycloakVersion:
    Type: String
    Default: 24.0.3
    Description: The version of the Keycloak container image to deploy

Resources:

  # Create a Keycloak secret
  KeycloakSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub KeycloakSecretECS-${AWS::StackName}
      Description: Keycloak secret
      GenerateSecretString:
        PasswordLength: 14
        ExcludeCharacters: '"@/\''$`,;!%<>#'


  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join ['-', ['/ecs/keycloak-non-prod', !Ref 'AWS::StackName']]
      RetentionInDays: 14

  # ECS Cluster
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub ${AWS::StackName}-Cluster

  # Keycloak Fargate Service
  KeycloakService:
    Type: AWS::ECS::Service
    DependsOn: ALBListener
    Properties:
      Cluster: !Ref ECSCluster
      DesiredCount: 1
      EnableExecuteCommand: true
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets: !Ref PrivateSubnets
          SecurityGroups:
            - !Ref FargateSecurityGroup
      LoadBalancers:
        - ContainerName: keycloak
          ContainerPort: 8080
          TargetGroupArn: !Ref ALBTargetGroup
      TaskDefinition: !Ref KeycloakTaskDefinition

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  ECSTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: KeycloakECSPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: secretsmanager:GetSecretValue
                Resource: !Ref KeycloakSecret
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: !GetAtt LogGroup.Arn

  KeycloakTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: keycloak
      Cpu: 512
      Memory: 1024
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      TaskRoleArn: !Ref ECSTaskRole
      ContainerDefinitions:
        - Name: keycloak
          Image: !Sub quay.io/keycloak/keycloak:${KeycloakVersion}
          PortMappings:
            - ContainerPort: 8080
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
          Environment:
            - Name: KEYCLOAK_ADMIN
              Value: admin
            - Name: KEYCLOAK_ADMIN_PASSWORD
              Value: !Sub '{{resolve:secretsmanager:${KeycloakSecret}:SecretString}}'
          Command:
               - "start-dev"

  # Security group for Fargate tasks
  FargateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Fargate Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  # Application Load Balancer
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup  
    Properties:
      GroupDescription: ALB Security Group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Subnets: !Ref PublicSubnets
      SecurityGroups:
        - !Ref ALBSecurityGroup

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /realms/master
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: 200-399
      Port: 8080
      Protocol: HTTP
      TargetType: ip
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

Outputs:
  KeycloakServiceUrl:
    Description: The URL of the Keycloak service
    Value: !Sub http://${ApplicationLoadBalancer.DNSName}
  KeycloakSecretArn:
    Description: The ARN of the Keycloak secret
    Value: !Ref KeycloakSecret
